# server

./: .cnb.yml  .dockerignore  .gitignore  .port_output.txt  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  download-models.js  package-lock.json  package.json  run_server.ps1  server.js  start.bat  stop.bat  wasm-worker.js
.claude/: settings.local.json
.trae/documents/: plan_20260207_031459.md  plan_20260207_032400.md  plan_20260207_033416.md  plan_20260207_043415.md
models/: models.json
public/: index.html  monitor.html  openapi.json
src/: main.rs  translation.rs  wasm_engine.rs
