[package]
name = "linguaspark-server"
version = "0.1.0"
edition = "2024"
default-run = "linguaspark-server"

[dependencies]
anyhow = "1"
axum = "0.8"
isolang = "2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whichlang = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
